WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307154
REGRESSION(
306778@main
): [EGL] Cannot instantiate contexts with EGL 1.4 or older
https://bugs.webkit.org/show_bug.cgi?id=307154
Summary
REGRESSION(306778@main): [EGL] Cannot instantiate contexts with EGL 1.4 or older
Adrian Perez
Reported
2026-02-06 02:25:27 PST
After
306778@main
we are always passing an EGL_CONTEXT_OPENGL_DEBUG attribute to eglCreateContext(), but this attribute is supported starting with EGL 1.5; older implementations may choose to fail context creation when they encounter the unknown attribute. We can use EGL_CONTEXT_FLAGS_KHR + EGL_CONTEXT_OPENGL_DEBUG_BIT_KHR for older EGL versions.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2026-02-06 02:32:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58037
EWS
Comment 2
2026-02-06 04:13:42 PST
Committed
306935@main
(b1e8c0b53520): <
https://commits.webkit.org/306935@main
> Reviewed commits have been landed. Closing PR #58037 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-06 04:14:14 PST
<
rdar://problem/169792675
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug