REGRESSION(306778@main): [EGL] Cannot instantiate contexts with EGL 1.4 or older https://bugs.webkit.org/show_bug.cgi?id=307154

Reviewed by Nikolas Zimmermann.

Use EGL_CONTEXT_FLAGS_KHR+EGL_CONTEXT_OPENGL_DEBUG_BIT_KHR for EGL 1.4
or older when creating EGL contexts. Previously EGL_CONTEXT_OPENGL_DEBUG
was used unconditionally, which was introduced in EGL 1.5, and would
make context creation fail for older versions.

While at it, rename createContextForEGLVersion() to createEGLContext().
The former name implied that the EGL version would be passed as a
parameter, which was not the case. At any rate, the EGL version can
be checked from the GLDisplay so arrange to pass that instead of the
plain EGLDisplay.

* Source/WebCore/platform/graphics/egl/GLContext.cpp:
(WebCore::GLContext::createWindowContext):
(WebCore::GLContext::createSurfacelessContext):
(WebCore::GLContext::createPbufferContext):
(WebCore::GLContext::createEGLContext):
(WebCore::GLContext::createContextForEGLVersion): Deleted.
* Source/WebCore/platform/graphics/egl/GLContext.h:
* Source/WebCore/platform/graphics/egl/GLContextLibWPE.cpp:
(WebCore::GLContext::createWPEContext):

Canonical link: https://commits.webkit.org/306935@main